fixed issue where local storage wouldn't clear if one item remained in inventory, also aligned H1s better and changed font

--- a/src/dndinventory.css
+++ b/src/dndinventory.css
@@ -24,10 +24,12 @@
 
 .search-h1 {
   color: #f2e9e4;
+  font-family: 'Amatic SC', cursive;
 }
 
 .inv-h1 {
   color: #f2e9e4;
+  font-family: 'Amatic SC', cursive;
 }
 
 .card-container {
@@ -80,6 +82,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: -5px;
 }
 .input-box {
   padding-left: 5px;
